--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,12 @@ PyYAML==5.4.1
 scikit-learn==0.23.2
 scipy == 1.5.0
 soundfile==0.10.3.post1
-tensorboard == 2.2.2
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.8.1
+tensorboardX==2.5.1
 tgt == 1.4.4
-torch == 1.7.0
+torch==1.8.1+cu111
+torchaudio==0.8.1
+torchvision==0.9.1+cu111
 tqdm==4.46.1
 unidecode == 1.1.1
